tests/errors/phantom-check/multiple.expect
---CODE---
1
---STDERR---
error: component provided phantom event binding to non-phantom event argument
  ┌─ tests/errors/phantom-check/multiple.fil:3:19
  │
1 │ comp Foo<'G:1>(go: interface['G]) -> () {}
  │           - instance's event is not phantom
2 │ comp main<'G:1>() -> () {
  │            - event is a phantom event
3 │     f0 := new Foo<'G>();
  │                   ^^ invoke provides phantom event
  │
  = phantom ports are compiled away and cannot be used by subcomponents

error: component provided phantom event binding to non-phantom event argument
  ┌─ tests/errors/phantom-check/multiple.fil:4:19
  │
1 │ comp Foo<'G:1>(go: interface['G]) -> () {}
  │           - instance's event is not phantom
2 │ comp main<'G:1>() -> () {
  │            - event is a phantom event
3 │     f0 := new Foo<'G>();
4 │     f1 := new Foo<'G>();
  │                   ^^ invoke provides phantom event
  │
  = phantom ports are compiled away and cannot be used by subcomponents

Compilation failed with 2 errors.
Run with --show-models to generate assignments for failing constraints.
